fix landing page

--- a/src/components/Promotions/index.css
+++ b/src/components/Promotions/index.css
@@ -1,6 +1,6 @@
-.card-img {
-    /* width: 709px; */
-    height: 592px;
+.promotions-img {
+    width: 660px;
+    height: 660px;
     background-color: #dadada;
 }
 
