--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,20 +1,32 @@
-.nav-bar {
-    height: 94px;
-    background-color: #ededed;
+
+.header {
+    height: 522px;
+    background-color: #dadada;
 }
 
-.logo {
-    font-size: 27px;
-    margin-top: 25px;
-    margin-left: 32px;
-    color: #161615;
-}
-
-.menu-text {
-    margin-top: 25px;
-    margin-left: 32px;
+.text-header {
+    margin-top: 148px;
+    margin-left: 363px;
     font-family: Arial;
-    font-size: 11px;
+    font-size: 48px;
     color: #000000;
     text-decoration: rgb(0, 0, 0);
+}
+
+.second-text-header {
+    margin-left: 403px;
+    font-family: Arial;
+    font-size: 48px;
+    color: #000000;
+    text-decoration: rgb(0, 0, 0);
+}
+
+.description-header {
+    width: 581px;
+    height: 108px;
+    font-family: Arial;
+    font-size: 32px;
+    color: #4a4a4a;
+    text-decoration: rgb(74, 74, 74);
+    line-height: 36px;
 }
